--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EKS
 on:
   push:
     branches:
-      - main  # Adjust branch as needed
+      - master  # Adjust branch as needed
 
 jobs:
   deploy:
